# ekg-rs

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  cog.toml  rust-toolchain.toml
.cargo/: config-ci.toml  config.toml
.githooks/: commit-msg  post-commit  pre-commit
.github/: CONTRIBUTING.md  dependabot.yml
.github/actions/: README.md
.github/actions/generate-changelog/: action.yml
.github/actions/setup-cargo-binstall/: action.yml
.github/actions/setup-cargo-edit/: action.yml
.github/actions/setup-cargo-fmt-toml/: action.yml
.github/actions/setup-cargo-version-info/: action.yml
.github/actions/setup-cocogitto/: action.yml
.github/workflows/: auto-version-bump.yml  ci.yml  dependabot-auto-merge.yml
.sops/ekgf/: keys.json
crate/ekg-error/: Cargo.toml
crate/ekg-error/src/: lib.rs
crate/ekg-identifier/: Cargo.toml
crate/ekg-identifier/src/: lib.rs  namespace.rs
crate/ekg-identifier/src/consts/: mod.rs  namespace_iris.rs  namespaces.rs  prefixes.rs
crate/ekg-identifier/src/ekg_identifier_context/: mod.rs
crate/ekg-identifier/src/iri/: a_box_base.rs  env.rs  mod.rs  namespace_iri.rs  owned.rs  t_box_base.rs
crate/ekg-metadata/: Cargo.toml  README.md
crate/ekg-metadata/src/: class.rs  data_type.rs  graph.rs  lib.rs  predicate.rs  term.rs
crate/ekg-metadata/src/consts/: classes.rs  local_names.rs  mod.rs  predicates.rs  sparql.rs
crate/ekg-metadata/src/literal/: id_url_display.rs  mod.rs  tests.rs  this.rs  url_display.rs  value.rs
crate/ekg-namespace/: Cargo.toml
crate/ekg-namespace/src/: c_utils.rs  class.rs  graph.rs  lib.rs  namespace.rs  predicate.rs  term.rs
crate/ekg-namespace/src/consts/: consts.rs  mod.rs  sparql.rs
crate/ekg-namespace/src/literal/: tests.rs  this.rs
crate/ekg-sparql/: .gitignore  Cargo.toml  README.md
crate/ekg-sparql/src/: client.rs  datastore_type.rs  fact_domain.rs  flavor.rs  lib.rs  persistence_mode.rs  statement_type.rs  tests.rs
crate/ekg-sparql/src/client/: body.rs  mod.rs
crate/ekg-sparql/src/parameters/: builder.rs  handle.rs  mod.rs  tests.rs  this.rs
crate/ekg-sparql/src/parser/: mod.rs  test_select_statement.sparql  tests.rs
crate/ekg-sparql/src/prefixes/: builder.rs  declare_result.rs  handle.rs  mod.rs  tests.rs  this.rs
crate/ekg-sparql/src/rdfox/: class_report.rs  connectable_data_store.rs  data_store.rs  data_store_connection.rs  datastore_connection.rs  exception.rs.old  graph_connection.rs  license.rs  mod.rs  namespaces.rs.old  role_creds.rs  server.rs  statement.rs.old  streamer.rs  transaction.rs
crate/ekg-sparql/src/rdfox/cursor/: cursor.rs  cursor_row.rs  mod.rs  opened_cursor.rs
crate/ekg-sparql/src/rdfox/parameters/: builder.rs  handle.rs  mod.rs  tests.rs  this.rs
crate/ekg-sparql/src/rdfox/server_connection/: connection.rs  mod.rs
crate/ekg-sparql/src/statement/: mod.rs  statement_type.rs  tests.rs  this.rs  utils.rs
crate/ekg-sparql/tests/: README.md  concepts.ttl  rdfox_tests.rs  test.ttl
crate/ekg-util/: Cargo.toml  Makefile
crate/ekg-util/src/: env.rs  lib.rs  serde_util.rs  tls_config.rs  tls_connector.rs  tracing.rs
crate/ekg-util/src/iri/: base.rs  owned.rs
crate/ekg-util/src/log/: mod.rs
src/: lib.rs
