[workspace]
members = ["crate/*"]
resolver = "3"

[workspace.package]
repository = "git@github.com:dataroadinc/ekg-rs.git"
readme = "./README.md"
keywords = ["ekg", "knowledge-graph", "rdf", "aws"]
description = "Various utility Rust crates for Enterprise Knowledge Graph (EKG) architecture"
version = "0.0.19"
rust-version = "1.92.0"
edition = "2024"
authors = ["Jacobus Geluk <jacobus.geluk@ekgf.org>"]
publish = true
license-file = "./LICENSE"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev]
# less code to include in binary
panic = 'abort'
# link time optimization using whole-program analysis
lto = false
# optimization over all code (better optimization, slower build)
codegen-units = 256
# optimization for size (more aggressive)
opt-level = 0
incremental = true
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
# less code to include in binary
panic = 'abort'
# link time optimization using whole-program analysis
lto = true
# optimization over all code (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z'

[workspace.dependencies]
#
# Local crates
#
ekg-error = { path = "crate/ekg-error", version = "0.0.19" }
ekg-identifier = { path = "crate/ekg-identifier", version = "0.0.19" }
ekg-metadata = { path = "crate/ekg-metadata", version = "0.0.19" }
ekg-sparql = { path = "crate/ekg-sparql", version = "0.0.19" }
ekg-util = { path = "crate/ekg-util", version = "0.0.19" }
#
# Tracing & Logging
#
tracing = { version = "0.1.44", default-features = false, features = [
    "log",
    "attributes",
] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
    "ansi",
    "registry",
    "tracing-log",
] }
tracing-log = { version = "0.2.0", features = ["env_logger"] }
tracing-wasm = "0.2.1"
tracing-opentelemetry = { version = "0.32.0", default-features = false, features = [
    "tracing-log",
] }
opentelemetry = { version = "0.31.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", default-features = false }
test-log = { version = "0.2.19", default-features = false, features = [
    "trace",
] }
env_logger = { version = "0.11.8", default-features = true, features = [
    "regex",
] }
color-eyre = { version = "0.6.5", default-features = false, features = [
    "capture-spantrace",
    "track-caller",
] }
colored = { version = "2.1.0", default-features = true }
tonic = { version = "0.14.2", features = ["tls-roots"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
#
# Error handling
#
thiserror = { version = "2.0.17", default-features = false }
unreachable = "1.0.0"
simple-error = "0.3.0"
#
# Random Stuff
#
getrandom = { version = "0.4.0-rc.0" }
rand = "0.10.0-rc.6"
# Use the following version of uuid to avoid a conflict with the version of uuid in rdftk
uuid = { version = "1.7.0", features = [
    "v4",
    "v5",
    "serde",
    "fast-rng",
], default-features = false }
#uuid = { version = "=0.8.2", features = ["v4", "v5", "serde"], default-features = false }
#
# Serialization
#
serde = { version = "1", features = [
    "std",
    "derive",
], default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_path_to_error = { version = "0.1.20", default-features = false }
serde_urlencoded = { version = "0.7", default-features = true }
indoc = { version = "2", default-features = true }
nom = { version = "8.0.0", default-features = false, features = ["std"] }
#xlsxwriter = { git = "https://github.com/informationsea/xlsxwriter-rs.git", branch = "master", default-features = false }
xlsxwriter = { version = "0.6.1", default-features = false }
relative-path = { version = "2.0.1", default-features = false, features = [
    "serde",
    "std",
] }
#
# IRI stuff
#
iri-string = { version = "0.7.10", default-features = false, features = [
    "std",
    "serde",
    "alloc",
] }
iref = { version = "3.2.2", default-features = false, features = ["serde"] }
static-iref = "3.0.0"
url = "2.5.8"
#
# RDF stuff
#
spargebra = { version = "0.4.3", default-features = true }
rdftk_core = { version = "=0.3.1", default-features = false }
rdftk_iri = { version = "=0.1.9", default-features = false }
rdftk_io = { version = "=0.2.1", default-features = false, features = [
    "turtle",
] }
rdfox-sys = { version = "0.0.6", default-features = false }
oxigraph = { version = "0.5.3", default-features = true }
oxrdf = { version = "0.3.1", default-features = true }
r2d2 = "0.8.10"
#
# Config stuff
#
ignore = { version = "0.4.25", default-features = false }
config = { version = "0.15.19", default-features = false, features = ["toml"] }
structopt = "0.3.26"
clap = { version = "4.5.54", default-features = false, features = [
    "std",
    "color",
    "suggestions",
    "cargo",
    "env",
    "wrap_help",
] }
#
# Runtime stuff
#
tokio = { version = "1.49.0", default-features = false, features = [
    "macros",
    "full",
] }
#
# AWS
#
lambda_runtime = { version = "1.1.0-rc1", default-features = true }
aws-config = { version = "1.8.12", default-features = true, features = [
    "behavior-version-latest",
] }
aws-types = { version = "1.3.11", default-features = false }
aws-smithy-runtime = { version = "1.9.5", default-features = false, features = [
    "client",
    "tls-rustls",
    "connector-hyper-0-14-x",
] }
aws-smithy-runtime-api = { version = "1.9.5", default-features = true }
aws-sdk-sfn = { version = "1.96.0", default-features = true, features = [
    "behavior-version-latest",
] }
aws-sdk-neptune = { version = "1.94.0", default-features = true, features = [
    "behavior-version-latest",
] }
aws-sdk-neptunedata = { version = "1.92.0", default-features = true, features = [
    "behavior-version-latest",
] }
#
# HTTP Stuff
#
# Keep the versions of hyper and hyper-rustls in sync with the versions in aws-smithy-runtime
#
http = "1.4.0"
http-body-util = "0.1.3"
rustls = { version = "0.23.36", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
] }
hyper = { version = "1.8.1", default-features = false, features = ["full"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "http2",
    "tls12",
    "webpki-roots",
    "webpki-tokio",
    "logging",
] }
hyper-util = { version = "0.1.19", default-features = false, features = [
    "client",
    "client-legacy",
    "http2",
] }
salvo = { version = "0.88.0", default-features = false }
salvo_core = "0.88.0"
webpki-roots = "1.0.5"
mime = "0.3.17"
reqwest = { version = "0.13.1", default-features = false, features = [
    "gzip",
    "json",
    "rustls",
    "hickory-dns",
    "stream",
] }
reqwest-streams = { version = "0.14.0", default-features = false, features = [
    "json",
] }
#
# Git Stuff
#
gix = { version = "0.77.0", default-features = true }
gix-discover = { version = "0.45.0", default-features = true }
#
# Other Stuff
#
lazy_static = "1.5.0"
const_format = "0.2.35"
chrono = { version = "0.4.42", features = ["serde"] }
num_enum = "0.7.5"
phf = { version = "0.13.1", features = ["macros"] }
fancy-regex = { version = "0.17.0", default-features = true }
