[package]
name = "ekg-error"
description = "Error types for the EKG project"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.51"
serde_json = { workspace = true, optional = true }
serde_path_to_error = { workspace = true, optional = true }
serde_urlencoded.workspace = true
lambda_runtime = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
iri-string = { workspace = true, features = ["serde", "alloc"], optional = true }
ignore = { workspace = true, optional = true }
iref = { workspace = true, optional = true }
url = { workspace = true, optional = true }
hyper.workspace = true
spargebra.workspace = true
fluent-uri.workspace = true
rdftk_core = { workspace = true, optional = true }
rdftk_iri = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spargebra = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
reqwest-streams = { workspace = true, optional = true }
gix-discover = { workspace = true, optional = true }
salvo = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
rdfox-sys = { workspace = true, optional = true }
chrono.workspace = true
nom.workspace = true

[features]
default = ["iref", "serde"]
iref = ["dep:iref"]
serde = ["dep:serde_json", "dep:serde_path_to_error"]
aws-lambda-runtime = ["lambda_runtime", "serde"]
iri-string = ["dep:iri-string"]
rdftk-support = ["dep:rdftk_core", "dep:rdftk_iri"]
sparql = ["dep:spargebra"]
fs = ["dep:ignore"]
rdfox = ["sparql", "dep:r2d2", "dep:rdfox-sys"]
oxigraph = ["sparql"]
uuid = ["dep:uuid"]
reqwest = ["dep:reqwest", "dep:reqwest-streams", "dep:url"]
gix = ["dep:gix-discover"]
tauri = []
tokio = []
salvo = ["dep:salvo"]
tracing-subscriber = ["dep:tracing", "dep:tracing-subscriber"]
