[package]
name = "ekg-error"
description = "Error types for the EKG project"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
serde_json = { workspace = true, optional = true }
serde_path_to_error = { workspace = true, optional = true }
serde_urlencoded.workspace = true
lambda_runtime = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
iri-string.workspace = true
ignore = { workspace = true, optional = true }
iref = { workspace = true, optional = true }
url = { workspace = true, optional = true }
rdftk_core = { workspace = true, optional = true, default-features = false }
rdftk_iri = { workspace = true, optional = true, default-features = false }
reqwest = { workspace = true, optional = true }
relative-path.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
spargebra = { workspace = true, optional = true }
reqwest-streams = { workspace = true, optional = true }
gix-discover = { workspace = true, optional = true }
salvo = { workspace = true, optional = true }
salvo_core = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
rdfox-sys = { workspace = true, optional = true }
chrono.workspace = true
nom.workspace = true
hyper.workspace = true
uuid = { workspace = true, optional = true }
xlsxwriter = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { workspace = true, optional = true, features = ["js"] }

[features]
default = ["iref", "serde"]
iref = ["dep:iref"]
serde = ["dep:serde_json", "dep:serde_path_to_error"]
aws-lambda-runtime = ["lambda_runtime", "serde"]
rdftk-support = ["dep:rdftk_core", "dep:rdftk_iri"]
sparql = ["dep:spargebra"]
fs = ["dep:ignore"]
rdfox-support = ["sparql", "dep:r2d2", "dep:rdfox-sys"]
oxigraph-support = ["sparql"]
uuid = ["dep:uuid"]
reqwest = ["dep:reqwest", "dep:reqwest-streams", "dep:url"]
gix = ["dep:gix-discover"]
tauri = []
tokio = []
salvo = ["dep:salvo", "dep:salvo_core"]
tracing-subscriber = ["dep:tracing", "dep:tracing-subscriber"]
xlsx = ["dep:xlsxwriter"]