[package]
name = "ekg-identifier"
description = "A library for generating and parsing EKG identifiers"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
fluent-uri.workspace = true
iref.workspace = true
serde.workspace = true
lazy_static.workspace = true
const_format.workspace = true
ekg-error.workspace = true
ekg-util.workspace = true

[dev-dependencies]
test-log.workspace = true