[package]
name = "ekg-metadata"
description = "The basic EKG metadata classes and OWL-axiom IRIs"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
lazy_static.workspace = true
ekg-error.workspace = true
chrono.workspace = true
num_enum.workspace = true
phf.workspace = true
fancy-regex.workspace = true
mime.workspace = true
serde_urlencoded.workspace = true
iref.workspace = true
iri-string.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
oxrdf = { workspace = true, optional = true }
ekg-identifier.workspace = true
ekg-util.workspace = true

[dev-dependencies]
test-log.workspace = true

[features]
serde = ["ekg-error/serde", "dep:serde", "dep:serde_json"]
oxigraph-support = ["dep:oxrdf"]
rdfox-support = ["ekg-error/rdfox-support"]
