[package]
name = "ekg-util"
description = "A library with some low-level simple utility functions used by the other ekg-* crates"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
webpki-roots.workspace = true
rustls.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
ekg-error.workspace = true
fluent-uri.workspace = true
serde.workspace = true

[dev-dependencies]
